Add notification system and refactor related services
- Updated `Erp.Api.csproj` and `Erp.Application.csproj` to reference the new `Erp.Notifications` project.
- Added notification services registration in `Program.cs`.
- Refactored `AuthService` to use asynchronous user fetching.
- Enhanced `ForgotPasswordService` to send notifications using `NotificationSender`.
- Introduced `NotificationTypes` enum and `INotificationService` interface.
- Created `NotificationMessage` class to encapsulate notification details.
- Implemented notification service classes: `EmailNotification`, `FireBaseNotification`, `SmsNotification`, and `WhatsAppNotification`.
- Added `NotificationSender` class for background notification processing.
- Updated solution file to include the new notifications project.

--- a/Erp.Application/Erp.Application.csproj
+++ b/Erp.Application/Erp.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Erp.Domain\Erp.Domain.csproj" />
     <ProjectReference Include="..\Erp.Infrastructure\Erp.Infrastructure.csproj" />
+    <ProjectReference Include="..\Erp.Notifications\Erp.Notifications.csproj" />
   </ItemGroup>
 
   <ItemGroup>
