--- a/Erp.Api/Erp.Api.csproj
+++ b/Erp.Api/Erp.Api.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Erp.Application\Erp.Application.csproj" />
     <ProjectReference Include="..\Erp.Domain\Erp.Domain.csproj" />
     <ProjectReference Include="..\Erp.Infrastructure\Erp.Infrastructure.csproj" />
+    <ProjectReference Include="..\Erp.Notifications\Erp.Notifications.csproj" />
   </ItemGroup>
 
 </Project>
