Add Excel and CSV export functionality to BaseController
This commit introduces methods for exporting data to Excel and CSV formats in the `BaseController` class. A new attribute, `ExcelColumnNameAttribute`, is added for customizing column names during export. The `ClosedXML` library is included as a dependency to facilitate Excel file creation.

The `ExportToExcel` and `ExportToCsv` methods are implemented to handle data export, and the `EscapeCsvField` method is added to manage special characters in CSV fields. Additionally, the project file (`Erp.Api.csproj`) is updated to include the `ClosedXML` package.

--- a/Erp.Api/Erp.Api.csproj
+++ b/Erp.Api/Erp.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
