Enhance user and category management features
- Updated `.gitignore` to include `MigrationBackup/`.
- Modified `UserController` to support Admin and CompanyAdmin roles, added `GetAll` and `ChangePassword` methods.
- Introduced `GetWithProductsById` method in `CategoryController` to fetch categories with products.
- Simplified HTTP request pipeline in `Program.cs` by removing Swagger setup.
- Enhanced `appsettings.json` with new connection strings, JWT settings, and admin user password.
- Added mapping for `CategoryWithProductsDto` in `CategoryMappingProfile`.
- Updated `CategoryService` with `GetCategoryWithProductsByIdAsync` method.
- Revised user creation logic in `UserService` to assign roles based on current user.
- Updated `ICategoryService` interface to include new method for fetching categories with products.
- Created `CategoryWithProductsDto` for data transfer of categories with associated products.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Erp.Api/Properties/ServiceDependencies/erptestulasc - Zip Deploy
