--- a/Erp.Api/appsettings.json
+++ b/Erp.Api/appsettings.json
@@ -13,10 +13,23 @@
       "Application": "YourAppName"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=erperp;Username=postgres;Password=8066"
+  },
+  "Jwt": {
+    "SecretKey": "your-super-secret-key-with-at-least-32-characters",
+    "Issuer": "starter-api",
+    "Audience": "starter-client",
+    "ExpirationInMinutes": 60
+  },
+  "AdminUser": {
+    "Password": "Admin123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
